WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113873
WinCairo build fails to link.
https://bugs.webkit.org/show_bug.cgi?id=113873
Summary
WinCairo build fails to link.
peavo
Reported
2013-04-03 06:50:10 PDT
The symbols FrameView::setHeaderHeight(int) and FrameView::setFooterHeight(int) are reported as unresolved externals. They are only compiled if ACCELERATED_COMPOSITING is used.
Attachments
Patch
(3.54 KB, patch)
2013-04-03 07:00 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2013-04-03 07:00:59 PDT
Created
attachment 196345
[details]
Patch
peavo
Comment 2
2013-04-03 07:02:05 PDT
Removed double guards for USE(ACCELERATED_COMPOSITING), and moved methods out of USE(ACCELERATED_COMPOSITING) guard to fix linker errors.
Brent Fulgham
Comment 3
2013-04-04 23:17:07 PDT
Comment on
attachment 196345
[details]
Patch R=me
WebKit Commit Bot
Comment 4
2013-04-04 23:45:14 PDT
Comment on
attachment 196345
[details]
Patch Clearing flags on attachment: 196345 Committed
r147713
: <
http://trac.webkit.org/changeset/147713
>
WebKit Commit Bot
Comment 5
2013-04-04 23:45:16 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug