WinCairo build fails to link. https://bugs.webkit.org/show_bug.cgi?id=113873

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-04-04
Reviewed by Brent Fulgham.

Removed double guards for USE(ACCELERATED_COMPOSITING),
and moved methods out of USE(ACCELERATED_COMPOSITING) guard to fix linker errors.

* page/FrameView.cpp:
(WebCore::FrameView::setWantsLayerForTopOverHangArea):
(WebCore::FrameView::setWantsLayerForBottomOverHangArea):
(WebCore::FrameView::setWantsLayerForHeader):
(WebCore::FrameView::setWantsLayerForFooter):
(WebCore::FrameView::setHeaderHeight):
(WebCore::FrameView::setFooterHeight):

Canonical link: https://commits.webkit.org/132359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147713 268f45cc-cd09-0410-ab3c-d52691b4dbfc